cmake_minimum_required(VERSION 2.8)
project(plua)
aux_source_directory(. plua_src)

IF(WITH_GRAPHVIZ)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g3 -std=c++11 -DNDEBUG -O3 -DWITH_GRAPHVIZ")
ELSE()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g3 -std=c++11 -DNDEBUG -O3 ")
ENDIF()

IF(WITH_GRAPHVIZ)
add_library(pluag SHARED ${plua_src})
TARGET_LINK_LIBRARIES(pluag gvc)
ELSE()
add_library(plua SHARED ${plua_src})
TARGET_LINK_LIBRARIES(plua)
ENDIF()